<resources>
    <string name="app_name">Imedia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Trang chủ</string>
    <string name="menu_profile">Hồ sơ</string>
    <string name="menu_category">Sản phẩm</string>
    <string name="menu_cart">Giỏ hàng</string>
    <string name="menu_order">Đơn hàng</string>
    <string name="menu_wallet">Ví thanh toán</string>
    <string name="menu_success_order">Đơn thành công</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login">Đăng nhập</string>
    <string name="dont_have_account_yet">Bạn chưa có tài khoản?</string>
    <string name="register">Đăng kí</string>
    <string name="face_identified">Nhận diện khuôn mặt</string>
    <string name="your_name">Tên của bạn</string>
    <string name="your_email">Email của bạn</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="address">Địa chỉ</string>
    <string name="id">Mã</string>
    <string name="update">Cập nhật</string>
    <string name="add_face_identified">Thêm khuôn mặt</string>
    <string name="search_view_text">Bạn muốn tìm......</string>
    <string name="rcv_food_title">Đồ ăn </string>
    <string name="all">Tất cả</string>
    <string name="digital_title">Tiện ích</string>
    <string name="delivery_title">Vận chuyển</string>
    <string name="sign_up">Đăng ký</string>
    <string name="already_have_account_login">Đã có tài khoản, đăng nhập</string>
    <string name="default_rate">5.0</string>
    <string name="default_discount">Giam 50%</string>
    <string name="default_price">0 VND</string>
    <string name="price">Giá: </string>
    <string name="total_amount">Tổng tiền: </string>
    <string name="pay">Thanh toán</string>
    <string name="order_notification">Đơn hàng đang được vận chuyển</string>
    <string name="order_success_notification">Đơn hàng thành công</string>

    <string name="detail_product">Chi tiết sản phẩm</string>
    <string name="description">Mô tả</string>
    <string name="add_to_cart">Thêm giỏ hàng</string>
    <string name="amount">Số lương: </string>
    <string name="purchase_date">Ngày mua: </string>
    <string name="purchase_time">Giờ mua: </string>

    <string name="wallet">Ví tiền</string>
    <string name="current_balance">Số dư hiện tại</string>
    <string name="withdraw">Rút tiền</string>
    <string name="recharge">Nạp tiền</string>
    <string name="transaction_history">Lịch sử giao dịch</string>
    <string name="default_balance">0 VND</string>

    <string name="transaction">Giao dịch</string>
    <string name="transaction_details">Chi tiết giao dịch</string>
    <string name="amount_of_money">Số tiền</string>
    <string name="domestic_record_card">Thẻ ghi nội địa</string>
    <string name="transaction_name">Họ và tên chủ thẻ</string>
    <string name="card_number">Số thẻ (bao gồm 16 hoặc 19 ký tự)</string>
    <string name="effective_date">Ngày hiệu lực</string>
    <string name="default_transaction_name">NGUYEN VAN A</string>
    <string name="default_card_number">9704 xxxx xxxx xxxx</string>
    <string name="default_effective_date">MM-YY</string>
    <string name="pay_done">Xin cảm ơn quý khách</string>
    <string name="close">Đóng</string>
    <string name="ok">OK</string>
    <string name="logout_message">Bạn có chắc chắn muốn đăng xuất</string>
    <string name="cancel">Hủy</string>
    <string name="delivery">Giao hàng</string>
    <string name="hint_address">Số nhà,tên đường</string>
    <string name="sender">Người gửi</string>
    <string name="receiver">Người nhận</string>
    <string name="next">Tiếp</string>
    <string name="dia_chi_gui">Địa chỉ gửi:</string>
    <string name="dia_chi_nhan">Địa chỉ nhận:</string>
    <string name="ten_nguoi_nhan">Tên người nhận</string>
    <string name="so_dien_thoai">Số điện thoại</string>
    <string name="khoi_luong">Khối lượng (kg)</string>
    <string name="distance">Khoảng cách: </string>
    <string name="default_distance">0</string>
    <string name="default_thanh_tien">Thành tiền: </string>
    <string name="dat">Đặt</string>
    <string name="layout_ship_title">Xác nhận thông tin</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="app_desc">Hàng hóa - Tiện ích - Vận chuyển</string>
    <string name="forgot_password">Quên mật khẩu</string>
    <string name="confirm">Xác nhận</string>
    <string name="log_out">Đăng xuất</string>
    <string name="name">Họ tên</string>
    <string name="km">km</string>
    <string name="viettel_card">Viettel</string>
    <string name="vinaphone_card">Vinaphone</string>
    <string name="mobiphone_card">Mobiphone</string>
    <string name="hinh_thuc_thanh_toan">Hình thức thanh toán</string>
    <string name="default_title_money">0</string>
    <string name="thanh_toan_qua_vi">Thanh toán qua ví</string>
    <string name="thanh_toan_ngan_hang">Thanh toán ngân hàng</string>
    <string name="loai_the">Loại thẻ</string>
    <string name="menh_gia">Mệnh giá: </string>
    <string name="mua_ma_the">Mua mã thẻ</string>
    <string name="nha_mang">Nhà mạng: </string>
    <string name="nhap_ma_pin">Nhập mã pin:</string>
    <string name="edit">Sửa</string>
    <string name="delete">Xóa</string>
    <string name="insert">Thêm</string>
    <string name="product_name">Tên sản phẩm</string>
    <string name="product_price">Giá sản phẩm</string>
    <string name="edit_product">Chỉnh sửa sản phẩm</string>
    <string name="delete_product">Bạn có chắc chắn muốn xóa sản phẩm này?</string>
    <string name="cancel_product">Hủy</string>
    <string name="insert_product">Thêm sản phẩm</string>
    <string name="desc_product">Mô tả</string>
    <string name="input_message">Nhập tin nhắn</string>
    <string name="default_message">Hi how are you</string>
    <string name="default_money">0 VND</string>
    <string name="hello_home">𝐗𝐢𝐧 𝐜𝐡à𝐨 !</string>
    <string name="imedia">IᗰEᗪIᗩ</string>
    <string name="tvDatDonGiaoHang">Đặt đơn giao hàng</string>
    <string name="analysis">Thống kê kinh doanh</string>
    <string name="list_confirmation">Đơn chờ xác nhận</string>
    <string name="mobile_recharege">Nạp điện thoại</string>
    <string name="data_recharge">Nạp Data 3G/4G</string>
    <string name="bill_payment">Thanh toán hóa đơn</string>
    <string name="chat">Nhắn tin</string>
    <string name="fruit">Hoa quả</string>
    <string name="vegetable">Rau xanh</string>
    <string name="fast_food">Đồ ăn nhanh</string>
    <string name="food">Đồ ăn</string>
    <string name="milk">Sữa</string>
    <string name="product_activity_title">Mua sản phẩm sạch</string>
    <string name="home">Trang chủ</string>
    <string name="user">Hồ sơ</string>
    <string name="food_title">Đặt đồ ăn</string>
    <string name="title_activity_chart_food">ChartFoodActivity</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="shipping_goods">Đơn vận chuyển</string>
    <string name="purchased_goods">Đơn đã mua</string>
    <string name="user_data">Thông tin cá nhân</string>
    <string name="basic_info">Thông tin cơ bản</string>

    <string name="name_info">🔸Họ và tên: </string>
    <string name="phone_info">🔸Số điện thoại: </string>
    <string name="address_info">🔸Địa chỉ: </string>
    <string name="email_info">🔸Email: </string>
    <string name="modify">Chỉnh sửa</string>
    <string name="hola_wallet">Ví Hola</string>
    <string name="vietnam_denominations">đ</string>


    <string name="mobile_recharge">Nạp điện thoại</string>
    <string name="mobile_data_recharge">Nạp 3G/4G</string>
    <string name="page_network">Chọn nhà mạng</string>
    <string name="denominations">Chọn mệnh giá</string>

    <string name="mobile_card_10">10.000</string>
    <string name="mobile_card_20">20.000</string>
    <string name="mobile_card_50">50.000</string>

    <string name="mobile_card_100">100.000</string>
    <string name="mobile_card_200">200.000</string>
    <string name="mobile_card_500">500.000</string>


    <string name="mobile_data_1">100MB/1 ngày \n 3.000</string>
    <string name="mobile_data_2">500MB/3 ngày \n 10.000</string>
    <string name="mobile_data_3">1GB/30 ngày \n 40.000</string>

    <string name="mobile_data_4">3GB/30 ngày \n 70.000</string>
    <string name="mobile_data_5">5GB/30 ngày \n 90.000</string>
    <string name="mobile_data_6">8GB/30 ngày \n 125.000</string>

    <string name="mobile_data_7">15GB/30 ngày  \n 230.000</string>
    <string name="mobile_data_8">500MB/1 ngày \n 5.000</string>
    <string name="mobile_data_9">3GB/180 phút \n 9.000</string>

    <string name="mobile_data_10">1GB/7 ngày \n 17.000</string>
    <string name="mobile_data_11">2GB/1 ngày \n 10.000</string>
    <string name="mobile_data_12">3GB/3 ngày \n 15.0000</string>
    <string name="vietnam_currency">VND</string>
    <string name="data_type">Gói cước:</string>


    <string name="empty_list_cart">Chưa có gì ở giỏ hàng, cùng đi mua sắm thôi nào</string>
    <string name="empty_list_order">Chưa có đơn hàng nào, cùng thanh toán nào</string>
    <string name="bill_payment_title">Thanh toán hóa đơn</string>
    <string name="water">Nước</string>
    <string name="list_title">Danh sách hóa đơn</string>
    <string name="order_list_title">Danh sách đơn vận chuyển</string>
    <string name="add_bill">Thêm hóa đơn</string>
    <string name="bill_code">Mã hóa đơn</string>
    <string name="deadline">Kỳ hạn thanh toán</string>
    <string name="udpate_profile">Cập nhật tài khoản</string>
    <string name="customer_id">Mã khách hàng</string>
    <string name="customer_name">Tên khách hàng</string>
    <string name="customer_address">Địa chỉ</string>
    <string name="customer_date">Kỳ hạn thanh toán</string>
    <string name="customer_fee">Phí giao dịch</string>
    <string name="free">Miễn phí</string>


</resources>