<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_marginTop="16dp"
        android:textSize="28sp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/tvShipTitle"
        android:text="@string/layout_ship_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvDiaChiGuiTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:text="@string/dia_chi_gui"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvShipTitle" />

    <TextView
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:maxLines="3"
        android:id="@+id/tvDiaChiGui"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDiaChiGuiTitle"
        tools:text="@string/app_name" />

    <TextView
        android:id="@+id/tvDiaChiNhanTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/dia_chi_nhan"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/tvDiaChiGuiTitle"
        app:layout_constraintTop_toBottomOf="@id/tvDiaChiGui" />


    <TextView
        android:layout_marginTop="8dp"
        android:maxLines="3"
        android:id="@+id/tvDiaChiNhan"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="16dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDiaChiNhanTitle"
        tools:text="@string/app_name" />

    <EditText
        android:id="@+id/etTenNguoNhan"
        android:hint="@string/ten_nguoi_nhan"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvDiaChiNhan"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="phone"
        android:id="@+id/etSoDienThoai"
        android:hint="@string/so_dien_thoai"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/etTenNguoNhan"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="number"
        android:id="@+id/etKhoiLuong"
        android:hint="@string/khoi_luong"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/etSoDienThoai"
        android:layout_marginTop="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/tvKhoangCachTitle"
        android:textSize="20sp"
        android:text="@string/distance"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintTop_toBottomOf="@id/etKhoiLuong"
        android:layout_marginTop="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvKhoangCach"
        android:textSize="20sp"
        android:text="@string/default_distance"
        app:layout_constraintStart_toEndOf="@id/tvKhoangCachTitle"
        app:layout_constraintTop_toTopOf="@id/tvKhoangCachTitle"
        android:layout_marginStart="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        app:layout_constraintTop_toTopOf="@id/tvKhoangCach"
        android:text="@string/km"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/tvKhoangCach"
        android:textSize="20sp"
        android:id="@+id/tvKm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvThanhTienTitle"
        app:layout_constraintStart_toStartOf="@id/tvKhoangCachTitle"
        android:textSize="20sp"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/tvKhoangCachTitle"
        android:layout_marginTop="32dp"
        android:text="@string/default_thanh_tien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/default_money"
        app:layout_constraintStart_toStartOf="@id/tvKhoangCach"
        app:layout_constraintTop_toTopOf="@id/tvThanhTienTitle"
        android:textSize="20sp"
        android:textColor="@color/red"
        android:id="@+id/tvThanhTien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/dat"
        android:id="@+id/btnDat"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="64dp"
        app:layout_constraintTop_toBottomOf="@id/tvThanhTienTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</androidx.constraintlayout.widget.ConstraintLayout>