<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvTransactionDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/transaction_details"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMaTheTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/mua_ma_the"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTransactionDetails" />

    <TextView
        android:id="@+id/tvNhaMangTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/nha_mang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMaTheTitle"
        tools:layout_editor_absoluteX="1dp" />

    <TextView
        android:id="@+id/tvNhaMang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:text="@string/viettel_card"
        app:layout_constraintStart_toEndOf="@+id/tvNhaMangTitle"
        app:layout_constraintTop_toTopOf="@+id/tvNhaMangTitle" />

    <TextView
        android:id="@+id/tvMenhGiaTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/menh_gia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNhaMang" />

    <TextView
        android:id="@+id/tvMenhGia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defalut_money"
        app:layout_constraintStart_toStartOf="@id/tvNhaMang"
        app:layout_constraintTop_toTopOf="@+id/tvMenhGiaTitle" />

    <TextView
        android:id="@+id/tvMaPin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/nhap_ma_pin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMenhGiaTitle" />

    <EditText
        android:id="@+id/etMaPin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMaPin" />

    <Button
        android:id="@+id/btnThanhToan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/pay"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etMaPin"
        app:layout_goneMarginTop="48dp" />

</androidx.constraintlayout.widget.ConstraintLayout>